Fixed lollipop popup menu readability

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -128,8 +128,8 @@
 	</string>
 	<string name="about_content2">
 	    Project developed by:\n
-	    Răzvan Mandache\n
-	    Tiberiu Omușoru\n
+	    Razvan.Mandache@gmail.com\n
+	    Tiberiu.Omusoru@gmail.com\n
 	</string>
 	<string name="about_content3">
 	    Design APP: WEB_MKT
